--- a/AssistanceRequestApp.Web/Views/Request/Index.cshtml
+++ b/AssistanceRequestApp.Web/Views/Request/Index.cshtml
@@ -9,7 +9,7 @@
     </div>
     <div class="widget-content">
         <div class="card-header bg-info text-white d-flex">
-            <input id="GridSearch" class="grid-search text-white ml-auto" style="color: Black!important;" placeholder="Search..." />
+            <input id="GridSearch" class="grid-search text-white ml-auto" style="color: Black!important;" placeholder="Search..." autocomplete="off" />
             <a id="createEditBookModal" href="@Url.Action("CreateEditRequest","Request")" class="btn btn-success text-white">
                 <span class="glyphicon glyphicon-plus"></span> Request
             </a>
