--- a/AssistanceRequestApp.Web/wwwroot/css/site.css
+++ b/AssistanceRequestApp.Web/wwwroot/css/site.css
@@ -2,70 +2,398 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
+}
+
+/* Dashboard*/
+
+.card-body {
+    padding: 1.5rem;
+    flex: 1 1 auto;
+}
+
+.row {
+    display: flex;
+    margin-right: -15px;
+    margin-left: -15px;
+    flex-wrap: wrap;
+}
+
+.col {
+    max-width: 100%;
+    flex-basis: 0;
+    flex-grow: 1;
+}
+
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col, .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm, .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md, .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg, .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl, .col-xl-auto {
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.text-uppercase {
+    text-transform: uppercase !important;
+}
+
+.mb-0, .my-0 {
+    margin-bottom: 0 !important;
+}
+
+.card-title {
+    margin-bottom: 1.25rem;
+}
+
+.font-weight-bold {
+    font-weight: 600 !important;
+}
+
+.mb-0, .my-0 {
+    margin-bottom: 0 !important;
+}
+
+h2, .h2 {
+    font-size: 1.25rem;
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: inherit;
+    font-weight: 600;
+    line-height: 1.5;
+    margin-bottom: .5rem;
+    color: #32325d;
+}
+
+.col-auto {
+    width: auto;
+    max-width: none;
+    flex: 0 0 auto;
+}
+
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col, .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm, .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md, .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg, .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl, .col-xl-auto {
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.icon-shape {
+    display: inline-flex;
+    padding: 12px;
+    text-align: center;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon {
+    width: 3rem;
+    height: 3rem;
+}
+
+.text-white {
+    color: #fff !important;
+}
+
+[class*='shadow'] {
+    transition: all .15s ease;
+}
+
+.text-white {
+    color: #fff !important;
+}
+
+.text-white {
+    color: #fff !important;
+}
+
+.shadow, .card-profile-image img {
+    box-shadow: 0 0 2rem 0 rgba(136, 152, 170, .15) !important;
+}
+
+.rounded-circle {
+    border-radius: 50% !important;
+}
+
+.bg-danger {
+    background-color: #f5365c !important;
+}
+
+.icon-shape i, .icon-shape svg {
+    font-size: 1.25rem;
+}
+
+.icon i, .icon svg {
+    font-size: 2.25rem;
+}
+
+.text-sm {
+    font-size: .875rem !important;
+}
+
+.mt-3, .my-3 {
+    margin-top: 1rem !important;
+}
+
+.mb-0, .my-0 {
+    margin-bottom: 0 !important;
+}
+
+.text-success {
+    color: #2dce89 !important;
+}
+
+.mr-2, .mx-2 {
+    margin-right: .5rem !important;
+}
+
+.text-success {
+    color: #2dce89 !important;
+}
+
+.text-success {
+    color: #28a745 !important;
+}
+
+.text-success {
+    color: #28a745 !important;
+}
+
+.text-sm {
+    font-size: .875rem !important;
+}
+
+.text-nowrap {
+    white-space: nowrap !important;
+}
+
+.bg-blue {
+    background-color: #5e72e4 !important;
+}
+
+
+button.bg-blue:hover,
+button.bg-blue:focus {
+    background-color: #324cdd !important;
+}
+
+.bg-indigo {
+    background-color: #5603ad !important;
+}
+
+
+button.bg-indigo:hover,
+button.bg-indigo:focus {
+    background-color: #3d027b !important;
+}
+
+.bg-purple {
+    background-color: #8965e0 !important;
+}
+
+
+button.bg-purple:hover,
+button.bg-purple:focus {
+    background-color: #683bd7 !important;
+}
+
+.bg-pink {
+    background-color: #f3a4b5 !important;
+}
+
+
+button.bg-pink:hover,
+button.bg-pink:focus {
+    background-color: #ed7790 !important;
+}
+
+.bg-red {
+    background-color: #f5365c !important;
+}
+
+
+button.bg-red:hover,
+button.bg-red:focus {
+    background-color: #ec0c38 !important;
+}
+
+.bg-orange {
+    background-color: #fb6340 !important;
+}
+
+
+button.bg-orange:hover,
+button.bg-orange:focus {
+    background-color: #fa3a0e !important;
+}
+
+.bg-yellow {
+    background-color: #ffd600 !important;
+}
+
+
+button.bg-yellow:hover,
+button.bg-yellow:focus {
+    background-color: #ccab00 !important;
+}
+
+.bg-green {
+    background-color: #2dce89 !important;
+}
+
+
+button.bg-green:hover,
+button.bg-green:focus {
+    background-color: #24a46d !important;
+}
+
+.bg-teal {
+    background-color: #11cdef !important;
+}
+
+
+button.bg-teal:hover,
+button.bg-teal:focus {
+    background-color: #0da5c0 !important;
+}
+
+
+.bg-white {
+    background-color: #fff !important;
+}
+
+
+button.bg-white:hover,
+button.bg-white:focus {
+    background-color: #e6e6e6 !important;
+}
+
+.bg-gray {
+    background-color: #8898aa !important;
+}
+
+
+button.bg-gray:hover,
+button.bg-gray:focus {
+    background-color: #6a7e95 !important;
+}
+
+.bg-gray-dark {
+    background-color: #32325d !important;
+}
+
+
+button.bg-gray-dark:hover,
+button.bg-gray-dark:focus {
+    background-color: #20203c !important;
+}
+
+.bg-light {
+    background-color: #ced4da !important;
+}
+
+
+button.bg-light:hover,
+button.bg-light:focus {
+    background-color: #b1bbc4 !important;
+}
+
+.bg-lighter {
+    background-color: #e9ecef !important;
+}
+
+button.bg-lighter:hover,
+button.bg-lighter:focus {
+    background-color: #cbd3da !important;
+}
+
+
+
+.bg-warning {
+    background-color: #fb6340 !important;
+}
+
+button.bg-warning:hover,
+button.bg-warning:focus {
+    background-color: #fa3a0e !important;
+}
+
+.bg-danger {
+    background-color: #f5365c !important;
+}
+
+
+button.bg-danger:hover,
+button.bg-danger:focus {
+    background-color: #ec0c38 !important;
 }
