--- a/AssistanceRequestApp.Web/wwwroot/css/site.css
+++ b/AssistanceRequestApp.Web/wwwroot/css/site.css
@@ -70,7 +70,7 @@ body {
     bottom: 0;
     width: 100%;
     white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 40px !important; /* Vertically center the text there */
 }
 
 /* Dashboard*/
