--- a/AssistanceRequestApp.Web/Views/Shared/_Layout.cshtml
+++ b/AssistanceRequestApp.Web/Views/Shared/_Layout.cshtml
@@ -44,28 +44,26 @@
         <main role="main" class="pb-3">
             @RenderBody()
             <div id="body">
-
                 <div id="chat-circle" class="btn btn-raised">
                     <div id="chat-overlay"></div>
                 </div>
-
                 <div class="chat-box">
                     <div class="chat-box-header">
                         Online Chat
                         <span class="chat-box-toggle"><i class="material-icons">close</i></span>
                     </div>
-                    <div class="chat-box-body">
-                        <div class="chat-box-overlay">
+                    @*<div class="chat-box-body">
+                            <div class="chat-box-overlay">
+                            </div>
                         </div>
-                        <div class="chat-logs">
-
-                        </div><!--chat-log -->
-                    </div>
-                    <div class="chat-input">
-                        <form>
-                            <input type="text" id="chat-input" placeholder="Send a message..." />
-                            <button type="submit" class="chat-submit" id="chat-submit"><i class="material-icons">send</i></button>
-                        </form>
+                        <div class="chat-input">
+                            <form>
+                                <input type="text" id="chat-input" placeholder="Send a message..." />
+                                <button type="submit" class="chat-submit" id="chat-submit"><i class="material-icons">send</i></button>
+                            </form>
+                        </div>*@
+                    <div class="chat-logs">
+                        <iframe src='https://webchat.botframework.com/embed/SanBotSample?s=DR_uNzGD9Os.L6U1LCVSd2WNwmbElE2691YJsOeAnYqP5ccTd_acqZw' style='width: 100%; height: 100%;'></iframe>
                     </div>
                 </div>
             </div>
