Added latest ChatBot Configuration AppId Information

--- a/AssistanceRequestApp.Web/Views/Shared/_Layout.cshtml
+++ b/AssistanceRequestApp.Web/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                         </form>
                     </div>*@
                 <div class="chat-logs">
-                    <iframe src='https://webchat.botframework.com/embed/SanBotSample?s=DR_uNzGD9Os.L6U1LCVSd2WNwmbElE2691YJsOeAnYqP5ccTd_acqZw' style='width: 100%; height: 100%;'></iframe>
+                    <iframe src='https://webchat.botframework.com/embed/AssistanceRequestChatBot?s=dM73AbTIZsI.lIAbtoZPDu6hxqHMRo1o4hUDPVz20v48mDVo_qliDMY' style='width: 100%; height: 100%;'></iframe>
                 </div>
             </div>
         </div>
