Added KickStart logics & Removed Unused files

--- a/AssistanceRequestApp.Web/Views/Shared/_Layout.cshtml
+++ b/AssistanceRequestApp.Web/Views/Shared/_Layout.cshtml
@@ -67,7 +67,8 @@
                         </form>
                     </div>*@
                 <div class="chat-logs">
-                    <iframe src='https://webchat.botframework.com/embed/AssistanceRequestChatBot?s=dM73AbTIZsI.lIAbtoZPDu6hxqHMRo1o4hUDPVz20v48mDVo_qliDMY' style='width: 100%; height: 100%;'></iframe>
+                    <iframe src='https://webchat.botframework.com/embed/AssistanceRequestAzureChat?s=qp3EBNrUMD4.fO463NveTyYaZ0PhuXwsXxKNAU9QYHS3MlHp13uJn7A' style='width: 100%; height: 100%;'></iframe>
+
                 </div>
             </div>
         </div>
